### [Unreleased]
#### Added
#### Changed
#### Deprecated
#### Removed
#### Fixed
#### Security

### [2.1.0]
#### Added
- Allow to filter by multiple group names
#### Changed
- Confirm compatibility with WordPress 6.9
- Update dependencies
#### Removed
- Revert escaping strings in blocks as React takes care of it
#### Security
- Add missing output escapes detected by Plugin Check

### [2.0.0]
#### Added
- Display "Show more events" button below the events list
- Document basic installation
- Add settings link to action links of plugin on plugins page
- Add donation link to meta row of plugin on plugins page
#### Changed
- Use `wp_remote_get()` instead of cURL functions for downloading the images
- Use date and time formats from general site settings
- Update dependencies
#### Removed
- Removed option "Display named offset"
#### Fixed
- Show group not found error message in block
#### Security
- Escape translated strings to prevent HTML injections

### [1.4.0]
#### Changed
- Update dependencies
- Confirm compatibility with WordPress 6.8

### [1.3.0]
#### Added
- Comment for translators what placeholder will contain
#### Changed
- Confirm compatibility with WordPress 6.7
- Load block script only in footer to reduce waiting time
- Update dependencies
#### Fixed
- Mark event-related data as non-translatable within plugin
- Add version number to script registration to break browser caching
- Handle location being null

### [1.2.0]
#### Added
- Display event picture if available
#### Changed
- Update dependencies

### [1.1.0]
#### Added
- Add some spacing between event items
#### Changed
- Update dependencies
- Confirm compatibility with WordPress 6.6
#### Fixed
- Fix undefined variable $classNamePrefix for both error views

### [1.0.0]
#### Added
- Display name of group when it cannot be found
#### Changed
- Let backend do requests to API of Mobilizon instance for increased privacy
- Update dependencies
#### Fixed
- Fix displaying more than one block in the editor
